--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>VCredit</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="./css/mobile.css">
+    <link rel="stylesheet" media="screen and (min-width: 1100px" href="./css/widescreen.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <title>VCredit | Financial Organization</title>
 </head>
 
 <body>
+    <nav id="navbar">
+        <h1 class="logo">
+            <span class="text-primary">
+                V<i class="fas fa-dollar-sign"></i></span>Credit
+        </h1>
+        <ul>
+            <li><a href="http://localhost:3000/index.html">Home</a></li>
+            <li><a href="http://localhost:3000/sign-up.html">Get a loan</a></li>
+            <li><a href="#">Login </a></li>
+            <li><a href="#">Services</a></li>
+        </ul>
+    </nav>
+
+    <!-- Header: Showcase -->
+    <header id="showcase">
+        <div class="showcase-content">
+            <h1 class="l-heading">
+                Get an instant loan...
+            </h1>
+            <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure debitis omnis
+                eaque,fugamollitia possimus.</p>
+            <a href="" class="btn">click here to apply</a>
+        </div>
+    </header>
     <script src="./jquery-3.4.1.js"></script>
     <script src="./js/app.js"></script>
 </body>
