--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -5,10 +5,129 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>VCredit</title>
 </head>
 
 <body>
+    <nav id="navbar">
+        <h1 class="logo">
+            <span class="text-primary">
+                V<i class="fas fa-dollar-sign"></i></span>Credit
+        </h1>
+        <ul>
+            <li><a href="http://localhost:3000/index.html">Home</a></li>
+            <li><a href="http://localhost:3000/sign-up.html">Get a loan</a></li>
+            <li><a href="#">Login </a></li>
+            <li><a href="#">Services</a></li>
+        </ul>
+    </nav>
+
+    <div id="form-container">
+        <div class="form-wrap">
+            <h1>Sign Up</h1>
+            <p>It's free and only takes a minute</p>
+            <form>
+                <div class="form-group">
+                    <label for="first-name">First Name</label>
+                    <input type="text" name="firstName" id="first-name" />
+                </div>
+                <div class="form-group">
+                    <label for="last-name">Last Name</label>
+                    <input type="text" name="lastName" id="last-name" />
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email" />
+                </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" name="password" id="password" />
+                </div>
+                <div class="form-group">
+                    <label for="password2">Confirm Password</label>
+                    <input type="password" name="pasword2" id="password2" />
+                </div>
+                <button type="submit" class="btn">Sign Up</button>
+                <p class="bottom-text">
+                    By clicking the Sign Up button, you agree to our
+                    <a href="#">Terms & Conditions</a> and
+                    <a href="#">Privacy Policy</a>
+                </p>
+            </form>
+        </div>
+        <footer>
+            <p>Already have an account? <a href="#">Login Here</a></p>
+        </footer>
+    </div>
+
+
+
+    <div class="container">
+        <form>
+            <h3>Create an account to get your loan</h3>
+            <!-- <label for="surname"></label> -->
+            <input type="text" name="" id="lastname" value="placeholder" placeholder="Enter your Surname">
+            <br>
+            <input type="text" name="" id="firstname" placeholder="Enter your Firstname">
+            <br>
+            <input type="email" name="" id="email" placeholder="Enter your email">
+            <br>
+            <input type="password" name="" id="password" placeholder="Create a password">
+            <br>
+            <input type="password" name="" id="password1" placeholder="Confirm your password">
+            <br>
+            <input type="date" name="" id="dob" placeholder="Date of birth">
+            <br>
+            <input type="text" name="" id="address" placeholder="address">
+            <input type="text" name="" id="occupation" placeholder="occupation">
+            <br>
+            <input type="number" name="" id="income" placeholder="income">
+            <br>
+            <select name="" id="amount">
+                <option value="100000">500,000</option>
+                <option value="200000">1000,000</option>
+                <option value="500000">2000,000</option>
+                <option value="1000000">5000,000</option>
+            </select>
+
+
+            <!-- <input type="number" name="" id="amount" placeholder="amount"> -->
+            <br>
+            <!-- <input type="submit"> -->
+
+            <!-- name age occupation -->
+            <button type="submit" id="submit-form">Submit</button>
+        </form>
+    </div>
+
+    <!-- <form>
+        <h3>Create an account to get your loan</h3>
+        <div class="form-group">
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                placeholder="Enter email">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="form-group">
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                placeholder="Enter email">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        </div>
+        <div class="form-group form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form> -->
     <script src="./jquery-3.4.1.js"></script>
     <script src="./js/app.js"></script>
 </body>
