--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="./css/styles.css">
     <title>VCredit</title>
 </head>
 
-<body>
+<body style="background:#344a72;">
     <nav id="navbar">
         <h1 class="logo">
             <span class="text-primary">
@@ -21,8 +21,8 @@
         <ul>
             <li><a href="http://localhost:3000/index.html">Home</a></li>
             <li><a href="http://localhost:3000/sign-up.html">Get a loan</a></li>
-            <li><a href="#">Login </a></li>
             <li><a href="#">Services</a></li>
+            <li><a href="#">Login </a></li>
         </ul>
     </nav>
 
@@ -30,16 +30,30 @@
         <div class="form-wrap">
             <h1>Sign Up</h1>
             <p>It's free and only takes a minute</p>
-            <form>
+            <form id="form">
                 <div class="form-group">
-                    <label for="first-name">First Name</label>
-                    <input type="text" name="firstName" id="first-name" />
+                    <label for="firstName">First Name</label>
+                    <input type="text" name="firstName" id="firstName" />
                 </div>
                 <div class="form-group">
-                    <label for="last-name">Last Name</label>
-                    <input type="text" name="lastName" id="last-name" />
+                    <label for="lastName">Last Name</label>
+                    <input type="text" name="lastName" id="lastName" />
+                </div>
+                <div class="form-radio"> Gender:
+                    <input style="margin-left: 1rem;" type="radio" name="gender" id="male" value="Male">
+                    <label style="margin-left: 0.5rem;" for="male">Male</label>
+                    <br>
+                    <input style="margin-left: 4.65rem;" type="radio" name="gender" id="female" value="Female">
+                    <label style="margin-left: 0.5rem;" for="female">Female</label>
+                    <br>
+                    <input style="margin-left: 4.65rem;" type="radio" name="gender" id="other" value="Other">
+                    <label style="margin-left: 0.5rem;" for="other">Other</label>
                 </div>
                 <div class="form-group">
+                    <label for="dob">Date of Birth</label>
+                    <input type="date" name="" id="dob">
+                </div>
+                <div class="form-group email">
                     <label for="email">Email</label>
                     <input type="email" name="email" id="email" />
                 </div>
@@ -47,9 +61,63 @@
                     <label for="password">Password</label>
                     <input type="password" name="password" id="password" />
                 </div>
+
                 <div class="form-group">
                     <label for="password2">Confirm Password</label>
-                    <input type="password" name="pasword2" id="password2" />
+                    <input type="password" name="password2" id="password2" />
+                    <!-- change the type later or through Javascript -->
+                </div>
+                <div class="form-group">
+                    <label for="phone">Mobile number</label>
+                    <input type="text" name="phone" id="phone" />
+                </div>
+                <div class="form-group">
+                    <label for="address">Address</label>
+                    <input type="text" name="" id="address">
+                </div>
+                <div class="form-group">
+                    <label for="occupation">Occupation</label>
+                    <input type="text" name="" id="occupation">
+                </div>
+                <div class="form-group">
+                    <label for="houseRent">House Rent</label>
+                    <input type="number" name="" id="houseRent">
+                </div>
+                <div class="form-group">
+                    <label for="income">Your monthly Income</label>
+                    <input type="number" id="income">
+                </div>
+                <div class="form-group">
+                    <select name="" id="amount">
+                        <option value="100000">N500,000</option>
+                        <option value="200000">N1000,000</option>
+                        <option value="500000">N2000,000</option>
+                        <option value="1000000">N5000,000</option>
+                    </select>
+                </div>
+                <div class="form-group">
+
+                </div>
+                <div class="form-group">
+
+                </div>
+                <div class="form-group">
+
+                </div>
+                <div class="form-group">
+
+                </div>
+                <div class="form-group">
+
+                </div>
+                <div class="form-group">
+
+                </div>
+                <div class="form-group">
+
+                </div>
+                <div class="form-group">
+
                 </div>
                 <button type="submit" class="btn">Sign Up</button>
                 <p class="bottom-text">
@@ -64,70 +132,6 @@
         </footer>
     </div>
 
-
-
-    <div class="container">
-        <form>
-            <h3>Create an account to get your loan</h3>
-            <!-- <label for="surname"></label> -->
-            <input type="text" name="" id="lastname" value="placeholder" placeholder="Enter your Surname">
-            <br>
-            <input type="text" name="" id="firstname" placeholder="Enter your Firstname">
-            <br>
-            <input type="email" name="" id="email" placeholder="Enter your email">
-            <br>
-            <input type="password" name="" id="password" placeholder="Create a password">
-            <br>
-            <input type="password" name="" id="password1" placeholder="Confirm your password">
-            <br>
-            <input type="date" name="" id="dob" placeholder="Date of birth">
-            <br>
-            <input type="text" name="" id="address" placeholder="address">
-            <input type="text" name="" id="occupation" placeholder="occupation">
-            <br>
-            <input type="number" name="" id="income" placeholder="income">
-            <br>
-            <select name="" id="amount">
-                <option value="100000">500,000</option>
-                <option value="200000">1000,000</option>
-                <option value="500000">2000,000</option>
-                <option value="1000000">5000,000</option>
-            </select>
-
-
-            <!-- <input type="number" name="" id="amount" placeholder="amount"> -->
-            <br>
-            <!-- <input type="submit"> -->
-
-            <!-- name age occupation -->
-            <button type="submit" id="submit-form">Submit</button>
-        </form>
-    </div>
-
-    <!-- <form>
-        <h3>Create an account to get your loan</h3>
-        <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                placeholder="Enter email">
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-        </div>
-        <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                placeholder="Enter email">
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-        </div>
-        <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-        </div>
-        <div class="form-group form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form> -->
     <script src="./jquery-3.4.1.js"></script>
     <script src="./js/app.js"></script>
 </body>
