Add Sign-up functionality

--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -119,7 +119,7 @@
                 <div class="form-group">
 
                 </div>
-                <button type="submit" class="btn">Sign Up</button>
+                <button type="submit" class="btn" id="submit-form">Sign Up & Apply</button>
                 <p class="bottom-text">
                     By clicking the Sign Up button, you agree to our
                     <a href="#">Terms & Conditions</a> and
