add admin log-in page and modify pages

--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -80,7 +80,7 @@
                     <input type="text" name="" id="occupation">
                 </div>
                 <div class="form-group">
-                    <label for="houseRent">House Rent</label>
+                    <label for="houseRent">Current House Rent</label>
                     <input type="number" name="" id="houseRent">
                 </div>
                 <div class="form-group">
@@ -120,6 +120,7 @@
 
                 </div>
                 <button type="submit" class="btn" id="submit-form">Sign Up & Apply</button>
+                <p>Ensure all inputs are correct</p>
                 <p class="bottom-text">
                     By clicking the Sign Up button, you agree to our
                     <a href="#">Terms & Conditions</a> and
