--- a/public/adminui.html
+++ b/public/adminui.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="./css/mobile.css">
+    <link rel="stylesheet" media="screen and (min-width: 1100px" href="./css/widescreen.css">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>VCredit</title>
+    <title>VCredit | Financial Organization</title>
 </head>
 
-<body style="background:#344a72;">
+<body>
     <nav id="navbar">
         <h1 class="logo">
             <span class="text-primary">
@@ -27,7 +28,7 @@
     </nav>
 
     <script src="./jquery-3.4.1.js"></script>
-    <script src="./js/app.js"></script>
+    <script src="./js/app-admin.js"></script>
 </body>
 
 </html>
