add admin functionalities

--- a/public/admin-login.html
+++ b/public/admin-login.html
@@ -44,17 +44,12 @@
                     <input type="password" name="password" id="password" />
                 </div>
                 <button type="submit" id="logIn" class="btn">Log in</button>
-                <p class="bottom-text">
-                    By clicking the Sign Up button, you agree to our
-                    <a href="#">Terms & Conditions</a> and
-                    <a href="#">Privacy Policy</a>
-                </p>
             </form>
 
         </div>
 
         <script src="./jquery-3.4.1.js"></script>
-        <script src="./js/app-admin.js"></script>
+        <script src="./js/app-admin-login.js"></script>
 </body>
 
 </html>
