--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -89,10 +89,10 @@
                 </div>
                 <div class="form-group">
                     <select name="" id="amount">
-                        <option value="100000">N500,000</option>
-                        <option value="200000">N1000,000</option>
-                        <option value="500000">N2000,000</option>
-                        <option value="1000000">N5000,000</option>
+                        <option value="100000"><span>&#8358;</span>500,000</option>
+                        <option value="200000"><span>&#8358;</span>1000,000</option>
+                        <option value="500000"><span>&#8358;</span>2000,000</option>
+                        <option value="1000000"><span>&#8358;</span>5000,000</option>
                     </select>
                 </div>
                 <div class="form-group">
