--- a/public/adminui.html
+++ b/public/adminui.html
@@ -1,15 +1,31 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <link rel="stylesheet" media="screen and (max-width: 768px)" href="./css/mobile.css">
-    <link rel="stylesheet" media="screen and (min-width: 1100px" href="./css/widescreen.css">
-    <link rel="stylesheet" href="./css/styles.css">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <style>
+        .container {
+            /* display: flex;
+            align-content: space-between;
+            justify-content: space-between;
+            flex-wrap: nowrap; */
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            overflow: hidden;
+        }
+
+        .card {
+            margin: 0.5rem;
+            line-height: 1.2;
+        }
+    </style>
     <title>VCredit | Financial Organization</title>
 </head>
 
@@ -27,8 +43,70 @@
         </ul>
     </nav>
 
+    <div id="all-pending-loan" class="container">
+
+    </div>
+
+    <div id="approved">
+        <h3>Approved Loan</h3>
+        <div id="approved-loan" class="container">
+        </div>
+    </div>
+    <div id="declined">
+        <h3>Declined Loan</h3>
+        <div id="declined-loan" class="container">
+        </div>
+    </div>
+    <div id="deleted">
+        <h3>Deleted Loan</h3>
+        <div id="deleted-loan" class="container">
+        </div>
+    </div>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
     <script src="./jquery-3.4.1.js"></script>
-    <script src="./js/app-admin.js"></script>
+    <script src="./js/app-admin-ui.js"></script>
 </body>
 
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <div>
+        Total Number of Applicants
+    </div>
+
+    <div>
+        Total Number of accepted loan
+    </div>
+
+    <div>
+        Total Number of decline loan
+    </div>
+
+    <div>
+        Total Number of paid loan
+    </div>
+
+    <div>
+        Total Number of unpaid loan
+    </div> -->
