--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
             <li><a href="http://localhost:3000/index.html">Home</a></li>
             <li><a href="http://localhost:3000/sign-up.html">Get a loan</a></li>
             <li><a href="#">Services</a></li>
-            <li><a href="#">Login </a></li>
+            <li><a href="http://localhost:3000/user-login.html">Login </a></li>
         </ul>
     </nav>
 
