--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
             <li><a href="http://localhost:3000/index.html">Home</a></li>
             <li><a href="http://localhost:3000/sign-up.html">Get a loan</a></li>
             <li><a href="#">Services</a></li>
+            <li><a href="http://localhost:3000/sign-up.html">Sign up</a></li>
             <li><a href="http://localhost:3000/user-login.html">Login </a></li>
         </ul>
     </nav>
@@ -35,7 +36,7 @@
             </h1>
             <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure debitis omnis
                 eaque,fugamollitia possimus.</p>
-            <a href="" class="btn">click here to apply</a>
+            <a href="http://localhost:3000/sign-up.html" class="btn">Click here to apply</a>
         </div>
     </header>
     <script src="./jquery-3.4.1.js"></script>
