--- a/public/userui.html
+++ b/public/userui.html
@@ -79,48 +79,45 @@
                         </div>
                         <div class="request-info">
                             <div style="display:inline-block; border: 2px solid gainsboro; border-radius: 5px;"
-                                class="loan-info">Current Loan
+                                class="loan-info">Loan
                                 <div style="display:inline-block;" class="info-loan-status">
                                 </div>
                             </div>
                         </div>
 
                         <div class="">
-                            <p>You requested for the following: <br> &#8358;<span id="amount" class="amount"></span>
+                            <p id="message">You requested for the following: <br> &#8358;<span id="amount"
+                                    class="amount"></span>
                                 loan on
                                 <span id="date-of-application" class="date-of-application"></span> </p>
-                            <p>Your loan request was declined due to <br><br>
-                                <a href="" id="details" class="btn btn-primary">See full Profile</a>
-                                <div id="details-card" class="card"
-                                    style="width:20rem; display:none; margin-top: 2rem;">
-                                    <ul class="list-group list-group-flush text-info">
-                                        <li class="list-group-item"><strong>Surname:</strong> <Span
-                                                class="surname"></Span>
-                                        </li>
-                                        <li class="list-group-item"> <strong>First Name:</strong> <span
-                                                id="firstname"></span>
-                                        </li>
+                            <a href="" id="details" class="btn btn-primary">See full Profile</a>
+                            <div id="details-card" class="card" style="width:20rem; display:none; margin-top: 2rem;">
+                                <ul class="list-group list-group-flush text-info">
+                                    <li class="list-group-item"><strong>Surname:</strong> <Span class="surname"></Span>
+                                    </li>
+                                    <li class="list-group-item"> <strong>First Name:</strong> <span
+                                            id="firstname"></span>
+                                    </li>
 
-                                        <li class="list-group-item"> <strong>Email:</strong> <span id="email"></span>
-                                        </li>
-                                        <li class="list-group-item"> <strong>Gender:</strong><span id="gender"></span>
-                                        </li>
-                                        <li class="list-group-item"> <strong>Mobile:</strong><span id="mobile"></span>
-                                        </li>
-                                        <li class="list-group-item"> <strong>Date of Birth:</strong><span
-                                                id="dob"></span>
-                                        </li>
-                                        <li class="list-group-item"> <strong>Address:</strong><span id="address"></span>
-                                        </li>
-                                        <li class="list-group-item"> <strong>Income:</strong><span id="income"></span>
-                                        </li>
-                                        <li class="list-group-item"> <strong>House rent:</strong><span
-                                                id="house-rent"></span>
-                                        </li>
-                                        <li class="list-group-item"> <strong>Occupation:</strong><span
-                                                id="occupation"></span></li>
-                                    </ul>
-                                </div>
+                                    <li class="list-group-item"> <strong>Email:</strong> <span id="email"></span>
+                                    </li>
+                                    <li class="list-group-item"> <strong>Gender:</strong><span id="gender"></span>
+                                    </li>
+                                    <li class="list-group-item"> <strong>Mobile:</strong><span id="mobile"></span>
+                                    </li>
+                                    <li class="list-group-item"> <strong>Date of Birth:</strong><span id="dob"></span>
+                                    </li>
+                                    <li class="list-group-item"> <strong>Address:</strong><span id="address"></span>
+                                    </li>
+                                    <li class="list-group-item"> <strong>Income:</strong><span id="income"></span>
+                                    </li>
+                                    <li class="list-group-item"> <strong>House rent:</strong><span
+                                            id="house-rent"></span>
+                                    </li>
+                                    <li class="list-group-item"> <strong>Occupation:</strong><span
+                                            id="occupation"></span></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
