--- a/public/confirmation_page.html
+++ b/public/confirmation_page.html
@@ -7,30 +7,34 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" media="screen and (max-width: 768px)" href="./css/mobile.css">
     <link rel="stylesheet" media="screen and (min-width: 1100px" href="./css/widescreen.css">
-    <link rel="stylesheet" href="./css/styles.css">
+    <!-- <link rel="stylesheet" href="./css/styles.css"> -->
     <title>VCredit | Confirmation</title>
 </head>
 
 <body>
-    <nav id="navbar">
-        <h1 class="logo">
-            <span class="text-primary">
-                V<i class="fas fa-dollar-sign"></i></span>Credit
-        </h1>
-        <ul>
-            <li><a href="http://localhost:3000/index.html">Home</a></li>
-            <li><a href="http://localhost:3000/sign-up.html">Get a loan</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Login </a></li>
+    <nav id="navbar" class="navbar navbar-expand-sm bg-success navbar-dark">
+        <a class="navbar-brand" href="http://localhost:3000/index.html">
+            <!-- <h1 class="logo"> -->
+            <strong>
+                <span class="text-primary">
+                    V<i class="fas fa-dollar-sign"></i></span>Credit
+                <!-- </h1> --></strong>
+        </a>
+        <ul class="navbar-nav  justify-content-end nav-tabs">
+            <li class="nav-item"><a class="nav-link" href="http://localhost:3000/index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="http://localhost:3000/sign-up.html">Get a loan</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
         </ul>
     </nav>
 
     <!-- Header: Showcase -->
-    <div>
+    <div class="jumbotron">
         <h1>Your application is successfully submitted</h1>
-        <p>Click here to <a href="http://localhost:3000/login.html">login</p>
+        <p>Click here to <a href="http://localhost:3000/user-login.html">login</p>
     </div>
     <script src="./jquery-3.4.1.js"></script>
     <script src="./js/app.js"></script>
